Bugfixes, Testing in DEv2

--- a/mm-app/views/app-listing.html
+++ b/mm-app/views/app-listing.html
@@ -30,7 +30,7 @@
 						</div>
 						
 						<ul class="tools">
-							<li><a href="{{item.url}}" download="item.name" data-toggle="tooltip" title="Download"><i class="fa fa-download"></i></a></li>
+							<li><a href="{{item.path}}" download="{{item.name}}" data-toggle="tooltip" title="Download"><i class="fa fa-download"></i></a></li>
 							<li><a href="" data-toggle="tooltip" title="Delete" ng-click="masterController.deleteSelection(masterController.OPEN_ID, [item])"><i class="fa fa-trash-o"></i></a></li>
 						</ul>
 
