--- a/mm-app/assets/css/less/app-main.less
+++ b/mm-app/assets/css/less/app-main.less
@@ -236,13 +236,14 @@ body {
 		left: 0;
 		top: 100px;
 		margin-right: -2px;
-		background: #fff;
+		background: transparent;
 		padding: 0;
 
 		.form-control {
 			border-radius: 0;
 			box-shadow: none;
 			border-color: #e7e7e7;
+			background: #fff;
 		}
 
 		.input-group-btn {
