--- a/mm-app/assets/css/app-main.css
+++ b/mm-app/assets/css/app-main.css
@@ -1,4 +1,4 @@
-/*! media-manager 2016-05-25 */
+/*! media-manager 2016-05-26 */
 /* Open Sans @font-face kit */
 /* BEGIN Light */
 @font-face {
@@ -279,13 +279,14 @@ body.on-drop-hover #mm-filedrop-cover {
   left: 0;
   top: 100px;
   margin-right: -2px;
-  background: #fff;
+  background: transparent;
   padding: 0;
 }
 .mm-wrapper #mm-add-folder-wrap .form-control {
   border-radius: 0;
   box-shadow: none;
   border-color: #e7e7e7;
+  background: #fff;
 }
 .mm-wrapper #mm-add-folder-wrap .input-group-btn .btn {
   border-radius: 0;
