Changed Empty Folder Message

--- a/mm-app/views/app-listing.html
+++ b/mm-app/views/app-listing.html
@@ -51,8 +51,8 @@
 			</div>
 
 			<div class="empty-filters" ng-if="!mediaItems.length">
-				<h1>No results found</h1>
-				<small>Try adjusting your search or filter to find what you're looking for.</small>
+				<h1>Empty Folder</h1>
+				<small>If you are filtering, try adjusting your search or filter to find what you're looking for.</small>
 			</div>
 
 		</div>
