Style Fixes for Footer .cols and before Pixie integration

--- a/mm-app/assets/css/less/app-main.less
+++ b/mm-app/assets/css/less/app-main.less
@@ -421,6 +421,11 @@ body {
 				flex-basis: 49%;
 				max-width: 49%;
 			}
+
+			.col-xs-2 {
+				flex-basis: 16.666%;
+				max-width: 16.666%;
+			}
 		}
 	}
 
