--- a/mm-app/assets/css/app-main.css
+++ b/mm-app/assets/css/app-main.css
@@ -1,4 +1,4 @@
-/*! media-manager 2016-05-26 */
+/*! media-manager 2016-06-01 */
 /* Open Sans @font-face kit */
 /* BEGIN Light */
 @font-face {
@@ -419,6 +419,12 @@ body.on-drop-hover #mm-filedrop-cover {
       -ms-flex-preferred-size: 49%;
           flex-basis: 49%;
   max-width: 49%;
+}
+.mm-wrapper .footer .row .col-xs-2 {
+  -webkit-flex-basis: 16.666%;
+      -ms-flex-preferred-size: 16.666%;
+          flex-basis: 16.666%;
+  max-width: 16.666%;
 }
 .mm-wrapper .btn-all-caps {
   text-transform: uppercase;
